--- a/Dockerfile.variations
+++ b/Dockerfile.variations
@@ -1,25 +1,28 @@
-ARG TARGET="temurin-alpine-11"
+ARG PROVIDER="temurin-alpine"
+ARG VERSION="25"
+ARG TARGET=${PROVIDER}-${VERSION}
 
-FROM ibm-semeru-runtimes:open-11-jre as semeru-11
+FROM ibm-semeru-runtimes:open-17-jre as semeru-17
+FROM ibm-semeru-runtimes:open-21-jre as semeru-21
+FROM ibm-semeru-runtimes:open-25-jre as semeru-25
 
-FROM ibm-semeru-runtimes:open-11-jre-focal as semeru-focal-11
+FROM ibm-semeru-runtimes:open-17-jre-focal as semeru-focal-17
+FROM ibm-semeru-runtimes:open-17-jre-jammy as semeru-jammy-17
 
-FROM ibm-semeru-runtimes:open-11-jre-jammy as semeru-jammy-11
+FROM eclipse-temurin:17-jre-alpine as temurin-alpine-17
+FROM eclipse-temurin:21-jre-alpine as temurin-alpine-21
+FROM eclipse-temurin:25-jre-alpine as temurin-alpine-25
 
-FROM eclipse-temurin:11-jre-alpine as temurin-alpine-11
+FROM eclipse-temurin:17-jre as temurin-17
+FROM eclipse-temurin:21-jre as temurin-21
+FROM eclipse-temurin:25-jre as temurin-25
 
-FROM eclipse-temurin:11-jre as temurin-11
+FROM eclipse-temurin:17-jre-focal as temurin-focal-17
+FROM eclipse-temurin:17-jre-jammy as temurin-jammy-17
 
-FROM eclipse-temurin:11-jre-focal as temurin-focal-11
-
-FROM eclipse-temurin:11-jre-jammy as temurin-jammy-11
-
-FROM eclipse-temurin:11-jre-ubi9-minimal as temurin-jre-ubi9-minimal
-
-FROM ibm-semeru-runtimes:open-17-jre as semeru-jre
-
-FROM adoptopenjdk/openjdk11:alpine-jre as adoptjdk-alpine-jre
-FROM adoptopenjdk/openjdk11:x86_64-alpine-jre-11.0.29_7 as adoptopenjdk-alpine-jre
+FROM eclipse-temurin:17-jre-ubi10-minimal as temurin-ubi10-minimal-17
+FROM eclipse-temurin:21-jre-ubi10-minimal as temurin-ubi10-minimal-21
+FROM eclipse-temurin:25-jre-ubi10-minimal as temurin-ubi10-minimal-25
 
 FROM ${TARGET}
 COPY udclient/lib/* /usr/local/bin/
