--- a/Dockerfile.variations
+++ b/Dockerfile.variations
@@ -25,7 +25,7 @@ FROM eclipse-temurin:21-jre-ubi10-minimal as temurin-ubi10-minimal-21
 FROM eclipse-temurin:25-jre-ubi10-minimal as temurin-ubi10-minimal-25
 
 FROM ${TARGET}
-COPY udclient/lib/* /usr/local/bin/
-COPY udclient/udclient /usr/local/bin
-COPY udcli /usr/local/bin/
-ENTRYPOINT [ "udcli" ]
+COPY udclient/lib/* /usr/local/bin/lib/
+COPY udclient/udclient /usr/local/bin/
+ENV JAVA_HOME=/opt/java/openjdk
+ENTRYPOINT [ "udclient" ]
